chore(filters): identityFilters always return userTasks only (#3750)
related to OPT-5413