@@ -68,6 +68,7 @@ import static org.camunda.optimize.test.util.DurationAggregationUtil.calculateEx
 import static org.camunda.optimize.util.BpmnModels.START_EVENT_ID;
 import static org.camunda.optimize.util.BpmnModels.getDoubleUserTaskDiagram;
 import static org.camunda.optimize.util.BpmnModels.getSimpleBpmnDiagram;
+import static org.camunda.optimize.util.BpmnModels.getTripleUserTaskDiagram;
 
 public class FlowNodeDurationByFlowNodeReportEvaluationIT extends AbstractProcessDefinitionIT {
 
@@ -929,7 +930,7 @@ public class FlowNodeDurationByFlowNodeReportEvaluationIT extends AbstractProces
     // given
     engineIntegrationExtension.addUser(SECOND_USER, SECOND_USER_FIRST_NAME, SECOND_USER_LAST_NAME);
     engineIntegrationExtension.grantAllAuthorizations(SECOND_USER);
-    final ProcessDefinitionEngineDto processDefinition = deployTwoUserTasksDefinition();
+    final ProcessDefinitionEngineDto processDefinition = deployThreeUserTasksDefinition();
     final ProcessInstanceEngineDto processInstanceDto = engineIntegrationExtension
       .startProcessInstance(processDefinition.getId());
     engineIntegrationExtension.finishAllRunningUserTasks(
@@ -938,10 +939,13 @@ public class FlowNodeDurationByFlowNodeReportEvaluationIT extends AbstractProces
     engineIntegrationExtension.finishAllRunningUserTasks(
       SECOND_USER, SECOND_USERS_PASSWORD, processInstanceDto.getId()
     );
+    engineIntegrationExtension.completeUserTaskWithoutClaim(processInstanceDto.getId());
+
     changeActivityDuration(processInstanceDto, START_EVENT, 10.);
     changeActivityDuration(processInstanceDto, USER_TASK_1, 20.);
     changeActivityDuration(processInstanceDto, USER_TASK_2, 30.);
-    changeActivityDuration(processInstanceDto, END_EVENT, 40.);
+    changeActivityDuration(processInstanceDto, USER_TASK_3, 40.);
+    changeActivityDuration(processInstanceDto, END_EVENT, 50.);
 
     importAllEngineEntitiesFromScratch();
 
@@ -969,17 +973,19 @@ public class FlowNodeDurationByFlowNodeReportEvaluationIT extends AbstractProces
     // given
     engineIntegrationExtension.createGroup(FIRST_CANDIDATE_GROUP_ID, FIRST_CANDIDATE_GROUP_NAME);
     engineIntegrationExtension.createGroup(SECOND_CANDIDATE_GROUP_ID, SECOND_CANDIDATE_GROUP_NAME);
-    final ProcessDefinitionEngineDto processDefinition = deployTwoUserTasksDefinition();
+    final ProcessDefinitionEngineDto processDefinition = deployThreeUserTasksDefinition();
     final ProcessInstanceEngineDto processInstanceDto = engineIntegrationExtension
       .startProcessInstance(processDefinition.getId());
     engineIntegrationExtension.addCandidateGroupForAllRunningUserTasks(FIRST_CANDIDATE_GROUP_ID);
     engineIntegrationExtension.finishAllRunningUserTasks();
     engineIntegrationExtension.addCandidateGroupForAllRunningUserTasks(SECOND_CANDIDATE_GROUP_ID);
     engineIntegrationExtension.finishAllRunningUserTasks();
+    engineIntegrationExtension.finishAllRunningUserTasks();
     changeActivityDuration(processInstanceDto, START_EVENT, 10.);
     changeActivityDuration(processInstanceDto, USER_TASK_1, 20.);
     changeActivityDuration(processInstanceDto, USER_TASK_2, 30.);
-    changeActivityDuration(processInstanceDto, END_EVENT, 40.);
+    changeActivityDuration(processInstanceDto, USER_TASK_3, 40.);
+    changeActivityDuration(processInstanceDto, END_EVENT, 50.);
 
     importAllEngineEntitiesFromScratch();
 
@@ -1116,6 +1122,10 @@ public class FlowNodeDurationByFlowNodeReportEvaluationIT extends AbstractProces
     return engineIntegrationExtension.deployProcessAndGetProcessDefinition(getDoubleUserTaskDiagram());
   }
 
+  private ProcessDefinitionEngineDto deployThreeUserTasksDefinition() {
+    return engineIntegrationExtension.deployProcessAndGetProcessDefinition(getTripleUserTaskDiagram());
+  }
+
   private ProcessReportDataDto getAverageFlowNodeDurationGroupByFlowNodeHeatmapReport(ProcessDefinitionEngineDto processDefinition) {
     return createReport(processDefinition.getKey(), processDefinition.getVersionAsString());
   }
@@ -1201,28 +1211,25 @@ public class FlowNodeDurationByFlowNodeReportEvaluationIT extends AbstractProces
       Arguments.of(
         IN,
         new String[]{DEFAULT_USERNAME, SECOND_USER, null},
-        Arrays.asList(
-          Tuple.tuple(START_EVENT, 10.),
+        List.of(
           Tuple.tuple(USER_TASK_1, 20.),
           Tuple.tuple(USER_TASK_2, 30.),
-          Tuple.tuple(END_EVENT, 40.)
+          Tuple.tuple(USER_TASK_3, 40.)
         )
       ),
       Arguments.of(
         NOT_IN,
         new String[]{SECOND_USER},
-        Arrays.asList(
-          Tuple.tuple(START_EVENT, 10.),
+        List.of(
           Tuple.tuple(USER_TASK_1, 20.),
-          Tuple.tuple(END_EVENT, 40.)
+          Tuple.tuple(USER_TASK_3, 40.)
         )
       ),
       Arguments.of(
         NOT_IN,
         new String[]{DEFAULT_USERNAME, SECOND_USER},
-        Arrays.asList(
-          Tuple.tuple(START_EVENT, 10.),
-          Tuple.tuple(END_EVENT, 40.)
+        Collections.singletonList(
+          Tuple.tuple(USER_TASK_3, 40.)
         )
       )
     );
@@ -1238,28 +1245,25 @@ public class FlowNodeDurationByFlowNodeReportEvaluationIT extends AbstractProces
       Arguments.of(
         IN,
         new String[]{FIRST_CANDIDATE_GROUP_ID, SECOND_CANDIDATE_GROUP_ID, null},
-        Arrays.asList(
-          Tuple.tuple(START_EVENT, 10.),
+        List.of(
           Tuple.tuple(USER_TASK_1, 20.),
           Tuple.tuple(USER_TASK_2, 30.),
-          Tuple.tuple(END_EVENT, 40.)
+          Tuple.tuple(USER_TASK_3, 40.)
         )
       ),
       Arguments.of(
         NOT_IN,
         new String[]{SECOND_CANDIDATE_GROUP_ID},
-        Arrays.asList(
-          Tuple.tuple(START_EVENT, 10.),
+        List.of(
           Tuple.tuple(USER_TASK_1, 20.),
-          Tuple.tuple(END_EVENT, 40.)
+          Tuple.tuple(USER_TASK_3, 40.)
         )
       ),
       Arguments.of(
         NOT_IN,
         new String[]{FIRST_CANDIDATE_GROUP_ID, SECOND_CANDIDATE_GROUP_ID},
-        Arrays.asList(
-          Tuple.tuple(START_EVENT, 10.),
-          Tuple.tuple(END_EVENT, 40.)
+        Collections.singletonList(
+          Tuple.tuple(USER_TASK_3, 40.)
         )
       )
     );
